Fix WP Linked text not wrapping words

--- a/themes/experience-engine-v2/assets/styles/components/single/single-content.css
+++ b/themes/experience-engine-v2/assets/styles/components/single/single-content.css
@@ -93,7 +93,7 @@
 			line-height: 1.6;
 		}
 		& a {
-			word-break: break-all;
+			word-break: break-word;
 		}
 	}
 
